# eventgraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PATENT-NOTICE  README.md  ROADMAP.md  SECURITY.md  eventgraph
.github/: PULL_REQUEST_TEMPLATE.md
docs/: architecture.md  authority.md  codegraph-spec.md  decision-trees.md  generator-function-self-derivation.md  generator-function.md  grammar.md  hive-spec.md  implementation-order.md  interfaces.md  primitives.md  protocol.md  task-management.md  tick-engine.md  trust.md  versioning.md
dotnet/: EventGraph.sln  README.md
go/: go.mod  go.sum
posts/: README.md  post01-20-primitives-and-a-late-night.md  post02-from-44-to-200.md  post03-the-architecture-of-accountable-ai.md  post04-the-pentagon-just-proved-why-ai-needs-a-consent-layer.md  post05-the-moral-ledger.md  post06-fourteen-layers-a-hundred-problems.md  post07-the-four-strategies.md  post08-what-its-like-to-be-a-node.md  post09-the-cult-test.md  post10-two-degraded-minds.md  post10b-the-map-so-far.md  post11-thirteen-graphs-one-infrastructure.md  post12-the-audit.md  post13-the-same-200-primitives-weighted-differently.md  post14-the-work-graph.md  post15-the-market-graph.md  post16-the-social-graph.md  post17-the-justice-graph.md  post18-the-research-graph.md  post19-the-knowledge-graph.md  post20-the-relationship-graph.md  post21-the-governance-graph.md  post22-the-culture-graph.md  (+17 more)
python/: README.md  pyproject.toml
python/eventgraph/: __init__.py  actor.py  bus.py  cli.py  codegraph.py  compositions.py  decision.py  egip.py  errors.py  event.py  graph.py  intelligence.py  postgres_store.py  primitive.py  primitives.py  sqlite_store.py  store.py  tick.py  trust.py  types.py
python/tests/: test_actor.py  test_bus.py  test_codegraph.py  test_conformance.py  test_decision.py  test_egip.py  test_event.py  test_graph.py  test_intelligence.py  test_postgres_store.py  test_primitive.py  test_primitives.py  test_sqlite_store.py  test_store.py  test_tick.py  test_trust.py  test_types.py
rust/: Cargo.toml  README.md
rust/src/: actor.rs  codegraph.rs  decision.rs  egip.rs  errors.rs  graph.rs  intelligence.rs  lib.rs  postgres_store.rs  primitives.rs  sqlite_store.rs  store.rs  tick.rs  trust.rs
rust/src/compositions/: work.rs
rust/tests/: actor_test.rs  codegraph_test.rs  decision_test.rs  egip_test.rs  graph_test.rs  primitives_test.rs  store_test.rs  trust_test.rs
ts/: README.md  (+3 more)
(+295 files in other folders)
