[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lovyou-eventgraph"
version = "0.1.0"
description = "Hash-chained, append-only, causal event graph"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "LovYou AI", email = "matt@lovyou.ai"}]
keywords = ["eventgraph", "event-sourcing", "hash-chain", "causal-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lovyou-ai/eventgraph"
Repository = "https://github.com/lovyou-ai/eventgraph"
Documentation = "https://github.com/lovyou-ai/eventgraph/tree/main/docs"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
