[package]
name = "eventgraph"
version = "0.6.0"
edition = "2024"
description = "Hash-chained, append-only, causal event graph"
license-file = "LICENSE"
authors = ["LovYou AI <matt@lovyou.ai>"]
keywords = ["eventgraph", "event-sourcing", "hash-chain", "causal-graph"]
repository = "https://github.com/transpara-ai/eventgraph"
readme = "README.md"
autobins = false

[features]
default = []
sqlite = ["rusqlite"]
postgres = ["dep:postgres"]
intelligence = ["ureq"]

[dependencies]
sha2 = "0.10"
uuid = { version = "1", features = ["v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
postgres = { version = "0.19", optional = true }
ureq = { version = "3", optional = true, features = ["json"] }

[[bin]]
name = "eg"
path = "src/bin/eg.rs"

[dev-dependencies]
